# syllable_network_analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  syllable_network.py  syllable_network_analysis.ipynb
configs/: config.yaml
data/: g35r38(SongInfo).npy
notebooks/: analysis.ipynb
scripts/: run_analysis.py
src/syllable_network_analysis/: __init__.py  syllable_network.py
src/syllable_network_analysis/analysis/: __init__.py  core.py
src/syllable_network_analysis/plot/: __init__.py  plots.py
src/syllable_network_analysis/utils/: __init__.py  helpers.py
tests/: test_analysis.py  test_plot.py  test_visualization.py
